--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -56,9 +56,13 @@
 
     <main class="divider">
       <section class="products">
-        <h2>My Cart</h2>
-
+        <h2>My Cart </h2>
+        <h1>Our Products</h1>
+    <ul id="product-list">
+      </ul>
+        
         <ul class="product-list">
+        </ul>
           <!-- <li class="cart-card divider">
             <a href="product_pages/marmot-ajax-3.html" class="cart-card__image">
               <img
